[gd_scene load_steps=9 format=3 uid="uid://80jl2dt5q6k"]

[ext_resource type="Script" path="res://main_menu_screen/main_menu.gd" id="1_ca2eg"]
[ext_resource type="PackedScene" uid="uid://uoylx5x0vn5k" path="res://main_menu_screen/panel_main_menu.tscn" id="2_mroy2"]
[ext_resource type="PackedScene" uid="uid://dwyyj14om1haf" path="res://main_menu_screen/panel_option.tscn" id="3_64g6t"]
[ext_resource type="PackedScene" uid="uid://oqobyv5cordy" path="res://system_menu/option_key_mapper.tscn" id="4_8i3km"]
[ext_resource type="PackedScene" uid="uid://cqmutegsb3702" path="res://system_menu/option_graphic.tscn" id="5_pnrst"]
[ext_resource type="PackedScene" uid="uid://cmgebnmi52uur" path="res://system_menu/option_audio.tscn" id="6_3flsi"]
[ext_resource type="PackedScene" uid="uid://b5gu5hnfa682" path="res://system_menu/option_gameplay.tscn" id="7_v25mt"]
[ext_resource type="PackedScene" uid="uid://cb4gp22j7rxhw" path="res://main_menu_screen/panel_load.tscn" id="8_yjnjp"]

[node name="Main_Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ca2eg")

[node name="panel_main_menu" parent="." instance=ExtResource("2_mroy2")]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.5
offset_top = -87.5
offset_right = 48.5
offset_bottom = 87.5

[node name="panel_option" parent="." instance=ExtResource("3_64g6t")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="option_KeyMapper" parent="." instance=ExtResource("4_8i3km")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="option_graphic" parent="." instance=ExtResource("5_pnrst")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="option_audio" parent="." instance=ExtResource("6_3flsi")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="option_gameplay" parent="." instance=ExtResource("7_v25mt")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="option_load" parent="." instance=ExtResource("8_yjnjp")]
unique_name_in_owner = true
visible = false
layout_mode = 1
